# bunq-cli

./: .gitignore  README.md  pyproject.toml
bunq_cli/: client.py  config.py  crypto.py  main.py
bunq_cli/commands/: accounts.py  draft_payments.py  session.py
tests/: test_draft_payments.py
